syntax = "proto3";

package chest;

message EquipItem {
    uint32 id = 1; // 装备id
    map<uint32, int32> attrs = 2;
}

message ChestInfo {
    EquipItem new = 1; // 新开出的装备, 如果id是0则是空
    map<uint32, EquipItem> equips = 2; // 装备列表
    map<uint32, int32> full_attrs = 3; // 总属性
    uint32 amount = 4; // 剩余次数
    uint32 lv = 5;
    uint32 exp = 6;
    uint32 dungeon_id = 7; // 当前副本id
}

// 加载宝箱数据
message c2s_load {
}
message s2c_load {
    uint32 err = 1; // OK
    ChestInfo info = 2; // 宝箱数据
}

message c2s_open {
}
message s2c_open  {
    uint32 err = 1; // OK，CHEST_AMOUNT_NOT_ENOUGH, NEW_EQUIP_EXIST
    ChestInfo info = 2; // 新开出的装备
}

message c2s_replace {
}
message s2c_replace {
    uint32 err = 1; // OK, NO_NEW_EQUIP
    ChestInfo info = 2;
}

message c2s_abandon {
}
message s2c_abandon {
    uint32 err = 1; // OK, NO_NEW_EQUIP
}

message c2s_challenge_dungeon {
    uint32 dungeon_id = 1; // 可重复挑战, 
}
message s2c_challenge_dungeon {
    uint32 err = 1; // OK, CHEST_DUNGEON_ID_ERROR
    uint32 war_uid = 2;
}